Fix Shrewd Friends name spacing

--- a/styles/scss/import/_acquaintances.scss
+++ b/styles/scss/import/_acquaintances.scss
@@ -16,4 +16,11 @@
       color: #006600;
     }
   }
+
+  strong.standing-toggle {
+    margin-right: 0;
+    padding: 0;
+    width: auto;
+    text-align: left;
+  }
 }
